update services and tests