@@ -4,22 +4,24 @@ import org.springframework.context.MessageSource;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import sn.isi.dao.IProduitRepository;
+import sn.isi.dto.AppUser;
 import sn.isi.dto.Produit;
 import sn.isi.exception.EntityNotFoundException;
 import sn.isi.exception.RequestException;
 import sn.isi.mapping.ProduitMapper;
-
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
 public class ProduitService {
-    private IProduitRepository iProduitRepository;
-    private ProduitMapper produitMapper;
+    private final IProduitRepository iProduitRepository;
+    private final ProduitMapper produitMapper;
     MessageSource messageSource;
+    private final static String PRODUITNOTFOUND = "produit.notfound";
 
     public ProduitService(IProduitRepository iProduitRepository, ProduitMapper produitMapper, MessageSource messageSource) {
         this.iProduitRepository = iProduitRepository;
@@ -28,17 +30,17 @@ public class ProduitService {
     }
 
     @Transactional(readOnly = true)
-    public List<Produit> getProduit() {
+    public List<Produit> getProduits() {
         return StreamSupport.stream(iProduitRepository.findAll().spliterator(), false)
                 .map(produitMapper::toProduit)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
-    public Produit getAppRole(int id) {
+    public Produit getProduit(int id) {
         return produitMapper.toProduit(iProduitRepository.findById(id)
                 .orElseThrow(() ->
-                        new EntityNotFoundException(messageSource.getMessage("produit.notfound", new Object[]{id},
+                        new EntityNotFoundException(messageSource.getMessage(PRODUITNOTFOUND, new Object[]{id},
                                 Locale.getDefault()))));
     }
 
@@ -54,7 +56,7 @@ public class ProduitService {
                     produit.setId(id);
                     return produitMapper.toProduit(
                             iProduitRepository.save(produitMapper.fromProduit(produit)));
-                }).orElseThrow(() -> new EntityNotFoundException(messageSource.getMessage("produit.notfound", new Object[]{id},
+                }).orElseThrow(() -> new EntityNotFoundException(messageSource.getMessage(PRODUITNOTFOUND, new Object[]{id},
                         Locale.getDefault())));
     }
 
